add reject button

--- a/views/approve.pug
+++ b/views/approve.pug
@@ -17,4 +17,5 @@ html
             p #{__('APPROVE', invitation.email_address)}
             form(method="POST")#approve-form.form
               input(type="submit", value="Approve").submit
+              input(type="submit", value="Reject").submit
 
