--- a/views/approve.pug
+++ b/views/approve.pug
@@ -16,6 +16,6 @@ html
           .information
             p #{__('APPROVE', invitation.email_address)}
             form(method="POST")#approve-form.form
-              input(type="submit", value="Approve").submit
-              input(type="submit", value="Reject").submit
+              input(type="submit", name="approved" value="Approve").submit
+              input(type="submit", name="approved" value="Reject").submit
 
