style for paragraphs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,10 @@ float: left;
 	margin-bottom: 40px;
 }
 
+.header p {
+  margin-top: 1em;
+  text-align: center;
+}
 
 h1{
 font-family: 'Open Sans', sans-serif;
