--- a/views/pending.pug
+++ b/views/pending.pug
@@ -8,17 +8,19 @@ html
     link(href="//fonts.googleapis.com/css?family=Lato:300,400,700,900,700italic|Open+Sans:700italic,400,600,300,700,800", rel="stylesheet", type="text/css")
   body
     #wrapper
-      .main
+      .main.pending
         .header
           h1
             strong #{__('PENDING_INVITES')}
         .content
           table
-            tr
-              th #{__('PENDING_EMAIL')}
-              th #{__('PENDING_APPROVAL_LINK')}
-            each invite in invites
+            thead
               tr
-                td #{invite.email_address}
-                td
-                  a(href=approvalLink(invite)) #{__('MANAGE_INVITE')}
+                th #{__('PENDING_EMAIL')}
+                th #{__('PENDING_APPROVAL_LINK')}
+            tbody
+              each invite in invites
+                tr
+                  td.email #{invite.email_address}
+                  td
+                    a(href=approvalLink(invite)) #{__('MANAGE_INVITE')}
